src/objects/Apttus_Config2__OrderIncentiveBenefitData__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__BeneficiaryId__c</fullName>
        <description>ID of the beneficiary associated with the benefit</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>ID of the beneficiary associated with the benefit</inlineHelpText>
        <label>Beneficiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GroupByValues__c</fullName>
        <description>The group by field values</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The group by field values</inlineHelpText>
        <label>Group By Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The rollup period end date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rollup period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The rollup period start date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rollup period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>